fixed gap in background color

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ Mode Selector Styling - This section defines the aesthetic qualities of the chec
   --textchroma: #000000;
   background-color: var(--backgroundchroma);
   color: var(--textchroma);
+  padding-bottom: 3em;
 }
 
 #lightordark:checked ~ .pagecontent{
